# common_infer_graph

./: README.md
build_engine/: CMakeLists.txt  README.md  build_engine.cpp
demo/: README.md  base_layers.py  comxcom_model.py  lhuc_model.py  mlcc_model.py  mmoe_model.py  ppnet_model.py  user_model.py
model/comxcom/: checkpoint  comxcom.ckpt.data-00000-of-00001  comxcom.ckpt.index  comxcom.engine  comxcom.onnx  comxcom.pb
model/lhuc/: checkpoint  lhuc.ckpt.data-00000-of-00001  lhuc.ckpt.index  lhuc.engine  lhuc.onnx  lhuc.pb
model/mlcc/: checkpoint  mlcc.ckpt.data-00000-of-00001  mlcc.ckpt.index  mlcc.engine  mlcc.onnx  mlcc.pb
model/mmoe/: checkpoint  mmoe.ckpt.data-00000-of-00001  mmoe.ckpt.index  mmoe.engine  mmoe.onnx  mmoe.pb
model/ppnet/: checkpoint  ppnet.ckpt.data-00000-of-00001  ppnet.ckpt.index  ppnet.engine  ppnet.onnx  ppnet.pb
model/user_model/: checkpoint  user_model.ckpt.index
perf/: CMakeLists.txt  README.md  tensorrt.cpp
perf/nsys_profile/: trt_comxcom_profile_b2048_view.nsys-rep  trt_lhuc_profile_b2048_view.nsys-rep  trt_mlcc_profile_b2048_view.nsys-rep  trt_mmoe_profile_b2048_view.nsys-rep  trt_ppnet_profile_b2048_view.nsys-rep  trt_user_model_profile_b2048_view.nsys-rep
